# closure-c

./: .gitmodules  CMakeLists.txt  closure.h  end_namespace.h
example/: example.h  imretarded.c  main.c
src/: CMakeLists.txt  Makefile  closure.h  closure.implementation.c  closure.interface.h  closure.template.h  example.script  example2.c  example2.script  example_closure_info.h  example_derp_deps.h  example_for_types.c  example_main.c  for_types.c  for_types.h  grammar.c  grammar.y  lex.l  main.c  namespace.h  output.c  output.h  parse.c  parse.h  parse_for_expression.c  parse_for_expression.h  parse_for_types.c  parse_for_types.h  parser-impl.c.h  parser-interface.h  parser-snippet.h  script_info.c  script_info.h  showbuf.c  showbuf.h  test_grammar.c
src/example/: closure_info.h  example.h  main.c
